--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,6 +16,6 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - docker build -t $REPOSITORY_URI:latest .
-      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+      - docker build -t server .
+      - docker tag server $REPOSITORY_URI:$IMAGE_TAG
     files: imagedefinitions.json
