--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,6 +22,7 @@ phases:
       - echo Build completed on `date`
       - echo Writing image definitions file...
       - docker login --username $dockerhub_username -p $dockerhub_password
+      - docker push $REPOSITORY_URI:$IMAGE_TAG
       - printf '[{"name”:"nginx","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
 artifacts:
   files: imagedefinitions.json
