--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,13 +12,13 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...          
-      - docker build -t $REPOSITORY_URI:$IMAGE_TAG .
+      - docker build -t 842098962737.dkr.ecr.us-east-1.amazonaws.com/nginx-website:latest .
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Writing image definitions file...
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 842098962737.dkr.ecr.us-east-1.amazonaws.com
-      - docker push $REPOSITORY_URI:$IMAGE_TAG
+      - docker push 842098962737.dkr.ecr.us-east-1.amazonaws.com/nginx-website:latest
       - printf '[{"name”:"nginx","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
 artifacts:
   files: 
