--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
       docker: 18
   pre_build:
     commands:
-      - aws ecr get-login-password --region us-east-1 | docker login --username dememedp --password-stdin $dockerhub_password
+      - aws ecr get-login-password --region us-east-1 | docker login --username dememedp -p $dockerhub_password
       - REPOSITORY_URI=842098962737.dkr.ecr.us-east-1.amazonaws.com/nginx-website
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
