--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,8 +5,10 @@ phases:
       docker: 18
   pre_build:
     commands:
-      - docker login -u $dockerhub_username -p $dockerhub_password
+      - aws configure set aws_access_key_id "AKIA4IEICOEYZCI3XIHY"
+      - aws configure set aws_secret_access_key $secret
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 842098962737.dkr.ecr.us-east-1.amazonaws.com
+      - docker login -u $dockerhub_username -p $dockerhub_password
       - REPOSITORY_URI=842098962737.dkr.ecr.us-east-1.amazonaws.com/nginx-website
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
