--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,6 +23,7 @@ phases:
       - echo Writing image definitions file...
       - docker push 842098962737.dkr.ecr.us-east-1.amazonaws.com/website:latest
       - printf '[{"name”:"nginx","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+      - cat imagedefinitions.json
 artifacts:
   files: 
     - imagedefinitions.json
